fix z-index in menus and try to fix arrow on ios

--- a/_sass/sidebar.sass
+++ b/_sass/sidebar.sass
@@ -49,7 +49,6 @@
     padding: 30px
     border-radius: 10px
     text-transform: uppercase
-    z-index: 200
 
 .sidebar
     display: flex
@@ -90,6 +89,8 @@
         border-radius: 0px
         transform: translateX(100%)
         transition: all 0.2s
+        z-index: 200
+        
     .toc-link a, .toc-title-wrapper a
         color: white
     .toc-current
@@ -200,7 +201,7 @@
     top: 32px
     width: 26px
     opacity: .8
-    margin: 0px 40px
+    margin: 0px 0px 0px 40px
 
 .toc-arrow-rot
     width: 26px
